clusters/on-prem/core/keycloak/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak-ingress
    namespace: keycloak
    annotations:
        kubernetes.io/ingress.class: traefik
        cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
    tls:
        - hosts:
            - ENC[AES256_GCM,data:7I4hiU1KQ3vvL0xmp3vB4/9eaSLwecwvhQ==,iv:Yo5FnZqSp6ajI9dWQI7UB78Wpv/WFNGczix43Q98B2E=,tag:TsWX80S3LkOtdMvb9TUOBA==,type:str]
    rules:
        - host: ENC[AES256_GCM,data:JYsbvrUdxEE6N9Rwh/xVdDIpDQ2z4SgOfg==,iv:3djr3OdQF3GVydOyPodYnW3hWnLPQcMRuNyc6ghnjmU=,tag:nkETrQF8BGhDs51uAQFJhw==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: keycloak-keycloak
                        port:
                            number: 80
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1xl8mrtu70kvhjdl2nva6dpt8wsy3fhmz6605fmwjujc3zztyeyzqd07nvv
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUQ1J1UTlYSkF3QUJDRjZj
[...]
            97tGYP0V09AtpaYvlAGWM8iEUME1RtIE/w+2NeyytbLrbKFSZ0rGRA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2023-05-28T12:19:43Z"
    mac: ENC[AES256_GCM,data:MCUTNZKrcb5dqn39gkZ5Dlr1eLtRSRTGH1C4eHXY9uwqxJZzXYfthaMVMM13kbSC8ya5oLAcaMjeFcxH0ArkXPcJMZkYQDAAsLL2PhrYrxL5Sve0ZeGlQawO3/g4PwGSIdK9r529rC8Ly+6yohkIGgBM0m57yvZ8UUVkU8y17I8=,iv:2+8Tk176NyFbc2UnTSj/BZN9f4j+ylacxaeD4xytD5k=,tag:5JxkH84MF689beW+NfSZaA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|email|dnsNames|hosts|host|externalUrl)$
    version: 3.7.3
